# kafka-log-syncing-poc

click-house-poc/clickhouse_to_opensearch/: Cargo.toml  watermark.json  watermark_info_logs.json  watermark_logs.json  watermark_new_info_logs.json  watermark_new_logs.json
click-house-poc/clickhouse_to_opensearch/src/: constant.rs  helper.rs  log.rs  main.rs
click-house-poc/custom_broker/: Cargo.toml
click-house-poc/custom_broker/src/: constant.rs  log.rs  main.rs  process.rs
click-house-poc/producer_app/: Cargo.toml
click-house-poc/producer_app/src/: constant.rs  helper.rs  log.rs  main.rs
connector_poc/: aiven-opensearch-sink-connector.json  docker-compose.yml
kafka_app/: .env  Cargo.toml
kafka_app/src/: config.rs  constant.rs  helper.rs  main.rs  models.rs  producer.rs  state.rs
kafka_consumer_opensearch/: Cargo.toml
kafka_consumer_opensearch/src/: main.rs
vector_poc/producer_app/: Cargo.toml
vector_poc/producer_app/src/: main.rs
