[package]
name = "kafka_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
hostname = "0.4.2"
rdkafka = { version = "0.38.0", features = ["ssl", "cmake-build"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
