[package]
name = "kafka_consumer_opensearch"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
rdkafka = { version = "0.38.0", features = ["ssl", "cmake-build"] }
reqwest = { version = "0.12.25", features = ["json","rustls-tls"],default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
